# CIS-194---2015

./: README.md
194-spring2013/hw1/: hw1.cabal
194-spring2013/hw1/app/: Main.hs
194-spring2013/hw1/src/: Hw1.hs
194-spring2013/hw10/: hw10.cabal
194-spring2013/hw10/src/: AParser.hs  Main.hs
194-spring2013/hw11/: hw11.cabal
194-spring2013/hw11/src/: AParser.hs  Main.hs  SExpr.hs
194-spring2013/hw12/: hw12.cabal
194-spring2013/hw12/src/: Main.hs  Risk.hs
194-spring2013/hw2/: cabal.config  hw1.cabal  hw2.cabal
194-spring2013/hw2/app/: Main.hs
194-spring2013/hw2/src/: Hw2.hs  Log.hs  LogAnalysis.hs  Main.hs
194-spring2013/hw3/: hw3.cabal
194-spring2013/hw3/app/: Main.hs
194-spring2013/hw3/src/: Golf.hs  Main.hs
194-spring2013/hw4/: hw4.cabal
194-spring2013/hw4/app/: Main.hs
194-spring2013/hw5/: hw5.cabal
194-spring2013/hw5/app/: Main.hs
194-spring2013/hw5/src/: Calc.hs  Main.hs  Parser.hs  StackVM.hs
194-spring2013/hw6/: hw6.cabal
194-spring2013/hw6/app/: Main.hs
194-spring2013/hw6/src/: Fibonacci.hs  Main.hs
194-spring2013/hw7/: hw7.cabal
194-spring2013/hw7/src/: Editor.hs  JoinList.hs  Main.hs  Scrabble.hs  StringBuffer.hs  StringBufferEditor.hs
194-spring2013/hw8/: hw8.cabal
194-spring2013/hw8/src/: Main.hs  Party.hs
194-spring2015/hw1/: hw1.cabal
194-spring2015/hw1/app/: Main.hs
194-spring2015/hw1/src/: Hw1.hs  Hw1Tests.hs  Main.hs
194-spring2015/hw1/test/: Spec.hs
194-spring2015/hw2/: hw2.cabal
194-spring2015/hw2/app/: Main.hs
194-spring2015/hw2/src/: Hw2.hs  Testing.hs
194-spring2015/hw2/test/: Spec.hs
194-spring2015/hw3/: hw3.cabal
194-spring2015/hw3/app/: Main.hs
194-spring2015/hw3/src/: Hw3.hs  Hw3Tests.hs
194-spring2015/hw3/test/: Spec.hs
194-spring2015/hw4/: hw4.cabal
194-spring2015/hw4/app/: Main.hs
194-spring2015/hw4/src/: Hw4.hs  Main.hs  Scratch.hs
194-spring2015/hw4/test/: Spec.hs
194-spring2015/hw5/: hw5.cabal
194-spring2015/hw5/app/: Main.hs
194-spring2015/hw5/data/: transactions.json
194-spring2015/hw5/src/: Hw5.hs  Main.hs  Parser.hs
194-spring2015/hw6/: hw6.cabal
194-spring2015/hw6/src/: Hw6.hs  Main.hs
194-spring2015/hw6/test/: Spec.hs
194-spring2015/hw7/: hw7.cabal
194-spring2015/hw7/src/: Hw7.hs
194-spring2015/hw8/: Hw8.hs
hw1/: hw1.cabal
hw1/src/: Hw1.hs
hw2/: hw2.cabal
hw2/src/: Hw2Tests.hs  Main.hs  Testing.hs
hw3/: hw3.cabal
hw3/src/: Main.hs
hw4/: hw4.cabal
hw4/src/: Hw4.hs  Hw4Tests.hs  Main.hs  Testing.hs
hw5/data/: new-transactions.json
hw5/src/: Parser.hs
hw6/: hw6.cabal
hw6/src/: Hw6.hs  Hw6Tests.hs  Main.hs  Scratch.hs
hw6/test/: Hw6Tests.hs
hw7/: hw7.cabal
hw7/src/: Hw7.hs  Main.hs
hw7/test/: Hw7Tests.hs
src/: Hw1.hs  Hw1Tests.hs  Testing.hs
