name: hw1
version: 0.1.0.0
cabal-version: >= 1.18
build-type: Simple
license: AllRightsReserved
author: roy

executable hw1
    build-depends:
        base
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Hw1
        Hw1Tests
        Testing
    ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts
