name: hw2
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
license: AllRightsReserved
author: roy

executable hw2
    build-depends:
        base -any,
        random -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Hw2
        Hw2Tests
        Testing
    ghc-options: -O2 -Wall -threaded -rtsopts
