name: hw3
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
license: AllRightsReserved
author: roy

executable hw3
    build-depends:
        containers,
        base -any,
        random -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Hw3
        Hw3Tests
        Testing
    ghc-options: -O2 -Wall -threaded -rtsopts
