name: hw6
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
license: AllRightsReserved
author: roy
 
executable hw6
    build-depends:
        base -any,
        random -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Hw6
        Hw6Tests
        Testing
    ghc-options: -O2 -threaded -rtsopts
