name: hw6
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
license: AllRightsReserved
author: roy

executable hw6
    build-depends:
        base -any,
        QuickCheck -any,
        HUnit -any,
        test-framework -any,
        test-framework-quickcheck2 -any,
        test-framework-hunit -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Hw6
    ghc-options: -O2 -threaded -rtsopts

test-suite hw6Test
    build-depends:
        base -any,
        QuickCheck -any,
        HUnit -any,
        test-framework -any,
        test-framework-quickcheck2 -any,
        test-framework-hunit -any
    type: exitcode-stdio-1.0
    main-is: Hw6Tests.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: test src
    -- other-modules:
