name: hw7
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
license: AllRightsReserved
author: roy

executable hw7
    build-depends:
        base -any,
        MonadRandom -any,
        random -any,
        vector -any,
        QuickCheck -any,
        HUnit -any,
        test-framework -any,
        test-framework-quickcheck2 -any,
        test-framework-hunit -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Hw7
    ghc-options: -O2 -threaded -rtsopts

test-suite hw7Test
    build-depends:
        base -any,
        MonadRandom -any,
        random -any,
        vector -any,
        QuickCheck -any,
        HUnit -any,
        test-framework -any,
        test-framework-quickcheck2 -any,
        test-framework-hunit -any
    type: exitcode-stdio-1.0
    main-is: Hw7Tests.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: test src
