name: hw12
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
license: AllRightsReserved
author: roy

executable hw12
    build-depends:
        base -any,
        MonadRandom
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Risk
    ghc-options: -O2 -Wall -threaded -rtsopts
