name: hw2
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
license: AllRightsReserved
author: roy

executable hw2
    build-depends:
        base -any
    main-is: Hw2.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
    ghc-options: -O2 -Wall -threaded -rtsopts
