name:                hw2
version:             0.1.0.0
author:              roy crippen
maintainer:          roycrippen@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LogAnalysis
                     , Log 
  build-depends:       base >= 4.7 && < 5
  other-modules:
 default-language:    Haskell2010

executable hw2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw2
  default-language:    Haskell2010

