name: hw4
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
license: AllRightsReserved
author: roy

executable hw4-exe
    build-depends:
        base -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: app
--    other-modules:
    ghc-options: -O2 -Wall -threaded -rtsopts
