name: hw5
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
license: AllRightsReserved
author: roy

executable hw5
    build-depends:
        base -any,
        random -any,
        bytestring -any,
        containers -any,
        aeson -any,
        aeson-pretty -any,
        binary -any,
        base -any,
        parallel -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Hw5
    ghc-options: -O2 -threaded -rtsopts
