name: hw7
version: 0.1.0.0
cabal-version: >=1.18
build-type: Simple
license: AllRightsReserved
author: roy

executable hw7
    build-depends:
        base -any,
        MonadRandom -any,
        random -any,
        vector -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Hw7
        Cards
    ghc-options: -O2 -threaded -rtsopts
